# samsung-galaxy-book5-linux-drivers

./: .gitignore  README.md
.claude/agents/: samsung-book5-linux-enablement.md
audio-config/: BUG-REPORT.md  COMMANDS-TO-RUN.md  GPIO_ANALYSIS.md  INVESTIGATION-LOG.md  Makefile.gpio  README-SOF.md  README.md  fix-speaker-unmute.sh  install-sof-fix.sh  install.sh  max98390_gpio_enable.c  patch.txt  quick_gpio_test.sh  sof-speaker-unmute.service  speaker_pin_fix.py
audio-config/archive/: AUDIO-NEXT-STEPS.md  AUDIO-NO-SOUND-DIAGNOSIS.md  AUDIO-ROOT-CAUSE-FOUND.md  GPIO_ARCHITECTURE.txt  GPIO_FIX_SUMMARY.md  MAX98390-QUICK-START.md  MAX98390_GPIO_GUIDE.md  QUICK-FIX-SPEAKERS.md  QUICK-SOF-FIX.md  QUICK_START_GPIO.txt  SOF-SPEAKER-FIX.md  SPEAKER-FIX-COMPLETE.md  SPEAKER-FIX-GUIDE.md  START-HERE.txt
audio-config/archive/scripts/: calculate_gpio.py  enable_max98390_gpio.sh  fix-speaker-pin.sh  sof_speaker_fix.py  speaker-unmute.service  speaker_codec_fix.py
audio-config/reference/: samsung-galaxybook-extras-README.md
audio-config/scripts/: audio-full-debug.sh  check-max98390.sh  test-fixes.sh  test-gpio-audio.sh  test.sh
audio-config/ucm2/conf.d/sof-hda-dsp/: HiFi-Samsung-940XHA.conf  Samsung-940XHA.conf
camera-enablement/: QUICK-START.md
samsung-battery-monitor/: .gitignore  Cargo.toml  INSTALL_SUMMARY.txt  NEXT_STEPS.md  README.md  TESTING.md  battery-monitor.service  install.sh  test.sh
samsung-battery-monitor/src/: main.rs
samsung-galaxybook-driver/: Makefile  README.md
samsung-galaxybook-driver/scripts/: install.sh  uninstall.sh
